--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,5 +8,25 @@ spring:
   cache:
     type: redis
   redis:
-    host: localhost
-    port: 6379
+    database: 0 # Database index used by the connection factory.
+    url: # Connection URL, will override host, port and password (user will be ignored), e.g. redis://user:password@example.com:6379
+    host: 127.0.0.1 # Redis server host.
+    port: 6379 # Redis server port.
+    password: # Login password of the redis server.
+    ssl: false # Enable SSL support.
+    timeout: 0 # Connection timeout in milliseconds.
+    pool:
+      enabled: false
+    jedis:      pool:        max-active: 8 # Max number of connections that can be allocated by the pool at a given time. Use a negative value for no limit.
+        max-idle: 8 # Max number of "idle" connections in the pool. Use a negative value to indicate an unlimited number of idle connections.
+        max-wait: -1 # Maximum amount of time (in milliseconds) a connection allocation should block before throwing an exception when the pool is exhausted. Use a negative value to block indefinitely.
+        min-idle: 0 # Target for the minimum number of idle connections to maintain in the pool. This setting only has an effect if it is positive.
+    cluster:
+      enabled: false
+      max-redirects: 10 # Maximum number of redirects to follow when executing commands across the cluster.
+      nodes: 127.0.0.1:6379 # Comma-separated list of "host:port" pairs to bootstrap from.
+    sentinel:
+      enabled: false
+      master: mymaster # Name of Redis server.
+      nodes: 127.0.0.1:27379 # Comma-separated list of host:port pairs.
+    
