--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@
 server:
   servlet:
     context-path: /correlation
-  port: 8083
+  port: 8084
     
 ## use create when running the app for the first time
 ## then change to "update" which just updates the schema when necessary
@@ -41,13 +41,13 @@ spring:
      
   redis:
     database: 0 # Database index used by the connection factory.
-    host: 192.168.99.100 # Redis server host.
-    port: 6379 # Redis server port.
-    password: # Login password of the redis server.
-    ssl: false # Enable SSL support.
-    timeout: 0 # Connection timeout in milliseconds.
+    host: ${REDIS_HOST} # Redis server host 192.168.99.100
+    port: ${REDIS_PORT} # Redis server port 6379 
+    password: ${REDIS_PASSWORD} # Login password of the redis server.
+    ssl: ${REDIS_SSL} # Enable SSL support.
+    timeout: 2000 # Connection timeout in milliseconds.
     pool:
-      enabled: false
+      enabled: true
     jedis:      pool:        max-active: 8 # Max number of connections that can be allocated by the pool at a given time. Use a negative value for no limit.
         max-idle: 8 # Max number of "idle" connections in the pool. Use a negative value to indicate an unlimited number of idle connections.
         max-wait: -1 # Maximum amount of time (in milliseconds) a connection allocation should block before throwing an exception when the pool is exhausted. Use a negative value to block indefinitely.
@@ -55,7 +55,7 @@ spring:
     cluster:
       enabled: false
       max-redirects: 10 # Maximum number of redirects to follow when executing commands across the cluster.
-      nodes: 127.0.0.1:32768 # Comma-separated list of "host:port" pairs to bootstrap from.
+      nodes: ${REDIS_CLUSTER_NODES} # Comma-separated list of "host:port" pairs to bootstrap from. pre-cam-scorr-cache.ilqfxs.ng.0001.euw1.cache.amazonaws.com:6379
     sentinel:
       enabled: false
       master: mymaster # Name of Redis server.
