--- a/pom.xml
+++ b/pom.xml
@@ -169,10 +169,19 @@
 			<version>12.2.0.1</version>
 		</dependency>
 
-		<!-- Spring HATEOAS to manage web pagination -->
+		<!-- Spring Boot Admin -->
 		<dependency>
-			<groupId>org.springframework.hateoas</groupId>
-			<artifactId>spring-hateoas</artifactId>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-starter-server</artifactId>
+			<version>2.1.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
 		<!-- TEST DEPENDENCIES. -->
