--- a/src/test/resources/perfomance/user.properties
+++ b/src/test/resources/perfomance/user.properties
@@ -1,6 +1,6 @@
 host=es1pocmom01v
 port=8084
-context=correlation
+context=correlation/v1.0
 protocol=http
-threads=20
-loops=1000
+threads=100
+loops=10
