--- a/pom.xml
+++ b/pom.xml
@@ -178,7 +178,7 @@
 
 		<!--Oracle database driver -->
 		<dependency>
-			<groupId>com.oracle</groupId>
+			<groupId>com.oracle.jdbc</groupId>
 			<artifactId>ojdbc8</artifactId>
 			<version>12.2.0.1</version>
 		</dependency>
